--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon datastore.js"
+    "start": "nodemon app.js"
   },
   "author": "Aditya R Rudra",
   "license": "ISC",
