--- a/server/package.json
+++ b/server/package.json
@@ -14,11 +14,15 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "express-session": "^1.17.1",
     "lodash": "^4.17.20",
     "mongodb": "^3.6.3",
     "mongoose": "^4.13.21",
     "mongoose-auto-increment": "^5.0.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.0.1"
   }
 }
