--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon server"
+    "server": "nodemon server"
   },
   "author": "",
   "license": "ISC",
@@ -22,6 +22,7 @@
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.4",
     "morgan": "^1.10.0",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "nodemailer": "^6.4.16"
   }
 }
