--- a/client/package.json
+++ b/client/package.json
@@ -1,16 +1,42 @@
 {
-  "name": "client",
+  "name": "datta-able-rv18.0.4",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://lite.codedthemes.com/datta-able/react/default/",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
-    "@testing-library/user-event": "^12.4.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "web-vitals": "^0.2.4",
-    "webpack": "^4.44.2"
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
+    "axios": "^0.21.0",
+    "bootstrap": "^4.5.3",
+    "font-awesome": "^4.7.0",
+    "google-maps-react": "^2.0.6",
+    "jquery": "^3.5.1",
+    "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.14.0",
+    "react-bootstrap": "^1.4.0",
+    "react-calendar": "^3.2.1",
+    "react-datepicker": "^3.3.0",
+    "react-datetime-calendar": "^0.2.1",
+    "react-datetime-picker": "^3.0.4",
+    "react-day-picker": "^7.4.8",
+    "react-dom": "^16.14.0",
+    "react-full-screen": "^0.2.5",
+    "react-icons": "^4.1.0",
+    "react-loadable": "^5.5.0",
+    "react-moment": "^1.0.0",
+    "react-nvd3": "^0.5.7",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^6.0.1",
+    "react-reveal": "^1.2.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^3.4.4",
+    "react-table-scrollbar": "^0.1.9",
+    "react-window-size": "^1.2.2",
+    "reactjs-popup": "^2.0.4",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -19,21 +45,15 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+    "extends": "react-app"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "react-to-print": "^2.12.0"
   }
 }
