--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^3.4.4",
+    "react-scroll": "^1.8.1",
     "react-table-scrollbar": "^0.1.9",
     "react-window-size": "^1.2.2",
     "reactjs-popup": "^2.0.4",
