--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "homepage": "http://lite.codedthemes.com/datta-able/react/default/",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
     "axios": "^0.21.0",
@@ -28,6 +30,7 @@
     "react-loadable": "^5.5.0",
     "react-moment": "^1.0.0",
     "react-nvd3": "^0.5.7",
+    "react-owl-carousel": "^2.3.3",
     "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^6.0.1",
     "react-reveal": "^1.2.2",
