--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon --exec 'mocha test/*/**.test.js'",
+    "pretest": "eslint --ignore-path .gitignore .",
+    "test": "nodemon --exec 'mocha tests/*/**.test.js'",
     "server": "nodemon server"
   },
   "author": "",
@@ -28,5 +29,9 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.16"
+  },
+  "devDependencies": {
+    "eslint": "^7.25.0",
+    "eslint-config-strongloop": "^2.1.0"
   }
 }
