--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.3",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "animate.css": "^3.7.2",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "font-awesome": "^4.7.0",
@@ -40,7 +41,8 @@
     "react-table-scrollbar": "^0.1.9",
     "react-window-size": "^1.2.2",
     "reactjs-popup": "^2.0.4",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "wowjs": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
