--- a/server/package.json
+++ b/server/package.json
@@ -19,17 +19,21 @@
     "chai": "^4.3.4",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "method-override": "^3.0.0",
     "mocha": "^8.3.2",
     "mongodb": "^3.6.3",
     "mongoose": "^5.11.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.16"
+    "multer-gridfs-storage": "^4.2.0",
+    "nodemailer": "^6.4.16",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^7.25.0",
